Version w/o JSON updated
